<resources>
    <string name="app_name">DisorganizedNotes</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_go_to_archive">Archive</string>
    <!-- Strings used for fragments for navigation -->
    <string name="notes_fragment_label">Notes</string>
    <string name="edit_fragment_label">New note</string>
    <string name="archived_notes_fragment_label">Archive</string>
    <string name="archived_notes_view_fragment_label">View archived</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_title">Title</string>
    <string name="edit_idea">Idea</string>
    <string name="edit_description">Description</string>
    <string name="edit_save_button">Save</string>
    <string name="edit_delete_button">Delete</string>
    <string name="edit_mark_as_done">Mark as done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>